api/deployment/gateway.httproute.api.k8s.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ingress-nagp-ecom-api
  labels:
    app: nagp-ecom-api
    type: gateway-ingress
    stack: nagp-ecom-api
  namespace: nagp-ecom
spec:
  parentRefs:
    - name: nagp-ecom-gateway
      namespace: nagp-ecom
  hostnames:
    - "ecom-api.docker.localhost"
    - "localhost"
  rules:
  - name: api-routes
    matches:
    - path:
        type: PathPrefix
        value: /api
    - path:
        type: RegularExpression
        value: "/(scalar|openapi)(/|$)"
    backendRefs:
    - name: nagp-ecom-api
      namespace: nagp-ecom
      port: 80
